# mytripspots

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.cursor/rules/: english-only.mdc
.github/workflows/: ci.yml  release.yml
apps/api/: .env.example  Dockerfile  main.py  pyproject.toml  schema.graphql
apps/api/app/: settings.py
apps/api/app/db/: models.py  session.py
apps/api/app/graphql/: schema.py  types.py
apps/api/app/services/: auth.py  geocoding.py  storage.py
apps/api/scripts/: export_graphql_schema.py
apps/api/tests/: conftest.py  test_auth.py  test_graphql_create_place.py  test_graphql_place.py  test_graphql_soft_delete_photo.py  test_graphql_trip_places.py  test_graphql_upload.py  test_storage.py
apps/web/: .env.example  Dockerfile  codegen.ts  next.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  sw-register.tsx
apps/web/components/: app-account-slot.tsx  app-page-background.tsx  app-page-header.tsx  app-shell-layout.tsx  home-page-client.tsx  map-view.tsx  place-page-client.tsx  place-page.module.css  travel-dashboard.tsx
apps/web/e2e/: place-page.spec.ts
apps/web/lib/: place-display.ts
apps/web/public/: manifest.json  sw.js
apps/web/tests/: README.md  (+1 more)
deploy/vps/: .env.api.example  .env.web.example  Caddyfile.example  docker-compose.yml
docs/: architecture.md  mvp-scope.md  testing.md  vps-deploy.md
infra/sql/: 0001_init.sql  0002_seed.sql  0003_app_grants.sql
(+29 files in other folders)
